# rust_crud_operations

./: .gitignore  README.md  rust_crud.postman_collection.json
rust_crud/: Cargo.toml
rust_crud/src/: errors.rs  handlers.rs  main.rs  models.rs  routes.rs
