[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15"
futures = "0.3"
actix-web = "4.0"  # Actix-web for creating HTTP server
actix-rt = "2.5"   # Actix runtime
thiserror = "1.0"